--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,16 +1,17 @@
 .app {
   position: absolute;
-  right: 0;
+  // right: 0;
   width: 100%;
   min-height: 100vh;
   padding: 100px;
   display: flex;
   /* Evenly distibute space between rows */
-  justify-content: space-between;
+  // justify-content: space-between;
   /* Vertically align */
+  justify-content: center;
   align-items: center;
-  background: yellow;
-  color: #fff;
+  // background: yellow;
+  // color: #fff;
   /* ALways over menu */
   z-index: 2;
   transition: 0.5s;
