--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,1 +1,66 @@
-<p>login works!</p>
+<div class="container">
+    <div class="text-center">
+      <h1>Welcome Back!</h1>
+    </div>
+    <form class="user" [formGroup]="loginForm" (ngSubmit)="login()">
+      <div class="form-group">
+        <input
+          class="form-control form-control-user"
+          type="username"
+          formControlName="username"
+          placeholder="Username"
+          [ngClass]="{
+            'is-invalid': submitted && loginForm.get('username').invalid
+          }"
+          name="username"
+        />
+        <div
+          class="invalid-feedback"
+          *ngIf="submitted && loginForm.get('username').invalid"
+        >
+          <div *ngIf="loginForm.get('username').errors['required']">
+            * Required
+          </div>
+          <div
+            *ngIf="loginForm.get('username').errors['serverValidationError']"
+          >
+            {{ loginForm.controls["username"].errors.serverValidationError }}
+          </div>
+        </div>
+      </div>
+      <div class="form-group">
+        <input
+          class="form-control form-control-user"
+          type="password"
+          formControlName="password"
+          type="password"
+          id="exampleInputPassword"
+          placeholder="Password"
+          name="password"
+          [ngClass]="{
+            'is-invalid': submitted && loginForm.get('password').invalid
+          }"
+        />
+        <div
+          class="invalid-feedback"
+          *ngIf="submitted && loginForm.get('password').invalid"
+        >
+          <div *ngIf="loginForm.get('password').errors['required']">
+            * Required
+          </div>
+          <div
+            *ngIf="loginForm.get('password').errors['serverValidationError']"
+          >
+            {{ loginForm.controls["password"].errors.serverValidationError }}
+          </div>
+        </div>
+      </div>
+      <button
+        class="btn btn-primary btn-block text-white btn-user"
+        type="submit"
+      >
+        Login
+      </button>
+      <hr />
+    </form>
+</div>
