Created a dummy service

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,6 @@
-<p>home works!</p>
+<div class="container">
+    <button (click)="helloWorld()" class="btn btn-primary">Make a dummy request</button>
+    <pre>
+        {{response | json}}
+    </pre>
+</div>
