Added manual url to dummy service

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,6 @@
 <div class="container">
     <button (click)="helloWorld()" class="btn btn-primary">Make a dummy request</button>
+    <button (click)="helloUser()" class="btn btn-primary">Make a Userservice request</button>
     <pre>
         {{response | json}}
     </pre>
